[package]
name = "otpc"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["interactive"]

interactive = ["tui", "termion", "tui", "clipboard", "unicode-width"]

[dependencies]
lotp = { git = "https://github.com/aidos9/lotp" }
clap = "2.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "2.0"

tui = { version = "0.8", optional = true }
termion = { version = "1.5", optional = true }
clipboard = { version = "0.5", optional = true }
unicode-width = { version = "0.1", optional = true}
